# fava-envelope

./: .envrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .replit  CHANGELOG.md  MANIFEST.in  Makefile  README.md  SECURITY.md  design.md  example.beancount  example_multicurrency.beancount  flake.nix  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: checks.yml  codeql-analysis.yml  pythonpublish.yml  release.yml
fava_envelope/: __init__.py
fava_envelope/modules/: beancount_envelope.py  main.py
fava_envelope/templates/: EnvelopeBudget.html
src/fava_envelope/: __init__.py
src/fava_envelope/cli/: __main__.py
src/fava_envelope/modules/: beancount_envelope.py  main.py
src/fava_envelope/templates/: EnvelopeBudget.html  _budget_table.html
