[project]
name = "fava-envelope"
version = "0.6.0"
description = ""
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["fava", "budget", "envelope"]
authors = [
  {email = "me@brianryall.xyz"},
  {name = "Brian Ryall"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

dependencies = [
    "fava>=1.26",
    "pandas>=2.2.2",
    "Click >= 7",
    "beanquery>=0.1.0",
    "beancount>=3.0.0",
]

[dependency-groups]
dev = [
  {include-group = "test"},
  {include-group = "typing"},
  {include-group = "lint"},
]
typing = [
    "pandas-stubs>=2.2.2",
  "mypy>=1.13.0",
]
test = [
  "pytest-cov>=6.0.0",
  "pytest-django>=4.9.0",
  "pytest>=8.3.3",
]
lint = [
  "ruff>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
homepage = "https://github.com/polarmutex/fava-envelope"
documentation = "https://github.com/polarmutex/fava-envelope"
repository = "https://github.com/polarmutex/fava-envelope"
changelog = "https://github.com/polarmutex/fava-envelope/master/CHANGELOG.md"

[tool.black]
line-length = 79

[tool.ruff.lint]
select = [
    "F", # flake8
    "E", # pycodestyle
    "W", # pycodestyle
    # "C90",    # McCabe cyclomatic complexity
    "I", # isort
    "N", # pep8-naming
    # "D", # docstyle
    "UP", # pyupgrade
    # "PD", # pandas-vet
]

[tool.basedpyright]
# many settings are not enabled even in strict mode, which is why basedpyright includes an "all" option
# you can then decide which rules you want to disable
typeCheckingMode = "standard"
exclude = [
    ".venv",
    ".direnv",
]
useLibraryCodeForTypes = true
venvPath="."
venv=".venv"
