[metadata]
name = fava_envelope
version = 0.5.4
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    beancount
    fava
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    tox
