[metadata]
name = fava_envelope
version = 0.5.4
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    beancount
    fava
python_requires = >=3.7
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
    mypy
    tox
